crates/service/tests/completion/snapshots/features__completion__elem__table_idx.snap
---
source: crates/service/tests/completion/elem.rs
expression: response
---
[
  {
    "label": "$table",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 16
        },
        "end": {
          "line": 2,
          "character": 17
        }
      },
      "newText": "$table"
    }
  }
]
