crates/service/tests/completion/snapshots/features__completion__elem__table_init.snap
---
source: crates/service/tests/completion/elem.rs
expression: response
---
[
  {
    "label": "$t",
    "kind": 6
  },
  {
    "label": "$e",
    "labelDetails": {
      "detail": "(elem $e)"
    },
    "kind": 6
  }
]
