crates/service/tests/completion/snapshots/features__completion__elem__table_init_after_first_immediate.snap
---
source: crates/service/tests/completion/elem.rs
expression: response
---
[
  {
    "label": "$e",
    "labelDetails": {
      "detail": "(elem $e)"
    },
    "kind": 6
  }
]
